Logical Assignment: perform NamedEvaluation of anonymous functions https://bugs.webkit.org/show_bug.cgi?id=212679

Reviewed by Ross Kirsling.

JSTests:

* stress/logical-assignment-operator-and.js:
* stress/logical-assignment-operator-coalesce.js:
* stress/logical-assignment-operator-or.js:

Source/JavaScriptCore:

* parser/ASTBuilder.h:
(JSC::ASTBuilder::makeAssignNode):


Canonical link: https://commits.webkit.org/225640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262638 268f45cc-cd09-0410-ab3c-d52691b4dbfc