JSTests/stress/logical-assignment-operator-coalesce.js
@@ -1695,3 +1695,23 @@ shouldThrowSyntaxError(`"test" ??= 42`);
 shouldThrowSyntaxError(`{} ??= 42`);
 
 shouldThrowSyntaxError(`[] ??= 42`);
+
+
+
+shouldBe(function() {
+    let x = null;
+    x ??= function() {};
+    return x.name;
+}, "x");
+
+shouldBe(function() {
+    let x = null;
+    x ??= () => {};
+    return x.name;
+}, "x");
+
+shouldBe(function() {
+    let x = null;
+    x ??= class {};
+    return x.name;
+}, "x");
